--- a/des157a/styles.css
+++ b/des157a/styles.css
@@ -41,7 +41,7 @@ h1, h2 {
 }
 
 #course-name-bar-1 {
-    background-color: slategray;
+    background-color: rgb(156, 173, 189);
     width: 83px;
     animation-name: course-bar-1-expanding-1;
     animation-duration: 2.5s;
@@ -56,11 +56,11 @@ h1, h2 {
     }
     12.5% {
         width: 123px;
-        background-color: slategray;
+        background-color: rgb(211, 217, 223);
     }
     37.5% {
         width: 43px;
-        background-color: rgb(53, 69, 85);
+        background-color: rgb(156, 173, 189);
     }
     50%{
         width: 83px;
@@ -71,7 +71,7 @@ h1, h2 {
     }
     100% {
         width: 83px;
-        background-color: slategray;
+        background-color: rgb(211, 217, 223);
     }
 }
 
@@ -201,6 +201,9 @@ ul {
     padding-left: 0px;
 }
 
+
+
+
 main {
     display: flex;
     justify-content: space-between;
@@ -224,7 +227,18 @@ main section:hover {
     box-shadow: 0px 0px 10px #2c384598;
 }
 
+/* #final {
+    display: flex;
+    flex-wrap: nowrap;
+}
 
+#final-bar {
+    border: 2px solid black;
+    box-sizing: border-box;
+    width: 100%;
+    height: 26px;
+    margin: 0px;
+} */
 
 
 main section h3 {
@@ -248,11 +262,11 @@ section li {
 
 section .link-name {
     display: block;
-    text-align: center;
+    text-align: left;
     text-decoration: none;
     font-family: 'Oxygen', sans-serif;
     font-size: 20px;
-    padding: 15px 0px ;
+    padding: 15px 0px 15px 15px;
     width: 100%;
     /* background-color: #4b748e; */
     color: #4b748e;
@@ -289,7 +303,7 @@ main section li:hover .link-name {
     text-decoration: none;
     font-family: 'Oxygen', sans-serif;
     font-size: 20px;
-    padding: 15px 0px ;
+    padding: 15px 0px 15px 15px;
     width: 85%;
     color: white;
     /* border: 1px solid #4b748e; */
