--- a/des157a/styles.css
+++ b/des157a/styles.css
@@ -330,7 +330,8 @@ footer {
     margin: 40px auto;
     display: flex;
     justify-content: space-between;
-
+    border: 1px solid #2c3845;
+    box-shadow: 0px 0px 10px #4b748e67;
 }
 
 footer a {
@@ -343,8 +344,8 @@ footer a {
     font-size: 20px;
     padding: 15px 0px ;
     color: #4b748e;
-    border: 1px solid #2c3845;
-    box-shadow: 0px 0px 10px #4b748e67;
+    /* border: 1px solid #2c3845; */
+    /* box-shadow: 0px 0px 10px #4b748e67; */
     transition: all 500ms;
     transition-timing-function: ease-in-out;
     line-height: 1;
