--- a/des157a/studios/mad-libs/styles.css
+++ b/des157a/studios/mad-libs/styles.css
@@ -105,6 +105,7 @@ form{
     font-size: 18px;
     color: #BABABA;
     transition: all 300ms ease-in-out;
+    cursor: text;
 }
 
 #process-indicator-circle, #process-indicator-fill {
@@ -119,6 +120,7 @@ form{
 
 .indicator-circle, .indicator-fill {
     width: 12px;
+    cursor: pointer;
 }
 
 .indicator-fill {
@@ -151,6 +153,7 @@ nav {
     transition: all 200ms ease-in-out;
     line-height: 1em;
     color: #666666;
+    cursor: pointer;
 }
 
 #next-btn {
