--- a/des157a/lj/lj3/styles.css
+++ b/des157a/lj/lj3/styles.css
@@ -8,7 +8,7 @@
 }
 
 #banner {
-    display: flex;
+    position: relative;
     height: 200px;
     max-width: 1100px;
     min-width: 700px;
@@ -20,24 +20,52 @@
     align-items: center;
     flex-wrap: wrap;
     align-content: center;
-    transition: all 1s;
+    transition: all 1s ease-in-out;
 }
 
-
-#overlay {
-    display: inline;
+#imgs {
+    position: relative;
+    width: 900px;
     height: 150px;
-    width: 600px;
-    margin: 50px auto;
-    background-color: #2c3845;
-    transition: all 2s;
+    display: flex;
+    justify-content: space-between;
+    margin: 25px auto;
+    transition: all 1s ease-in-out;
 }
+
+#imgs div {
+    display: block;
+    background-color: #2c3845;
+    width: 100px;
+    height: 150px;
+}
+
+#img-1 {
+    transition: all 1.5s ease-in-out;
+}
+
+#img-2 {
+    transition: all 0.8s ease-in-out;
+}
+
+#img-3 {
+    transition: all 1s ease-in-out;
+}
+
+#img-4 {
+    transition: all 1.25s ease-in-out;
+}
+
+#img-5 {
+    transition: all 0.5s ease-in-out;
+}
+
 
 #banner:hover {
     background-color: #2c3845;
 }
 
-#banner:hover #overlay {
+#banner:hover #imgs div {
     background-color: #e3ebf5;
 }
 
