--- a/des157a/studios/every-pictrue/styles.css
+++ b/des157a/studios/every-pictrue/styles.css
@@ -1,5 +1,6 @@
 * {
 	box-sizing: border-box;
+    margin: 0;
 }
 
 body {
@@ -8,6 +9,445 @@ body {
     font-family: 'Raleway', sans-serif;
     line-height: 1em;
 }
+
+header {
+    position: fixed;
+    top: 10vh;
+    left: 4vw;
+    z-index: 10000;
+    transition: all 1s ease-in-out;
+}
+
+header h1 {
+    font-size: 7vh;
+    font-weight: 700;
+    line-height: 9vh;
+    color: rgb(255, 255, 255);
+    transition: all 1s ease-in-out;
+}
+
+#container {
+    position: relative;
+    width: 100vw;
+    margin: 0 atuo;
+}
+
+main > div {
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    border-radius: 0px;
+    position: fixed;
+    overflow: auto;
+}
+
+#svg-container {
+    z-index: 100;
+}
+
+main > div .imgs {
+    height: 130vh;
+    top: -30vh;
+    visibility: visible;
+    position: absolute;
+    transition: all 500ms ease-in-out;
+}
+
+
+#left-arrow {
+    visibility: visible;
+    opacity: 1;
+    transition: all 500ms ease-in-out;
+    width: 50px;
+    position: absolute;
+    z-index: 9999;
+    right: 5vw;
+    top: 50vh;
+    cursor: pointer;
+}
+
+#left-arrow .cls-1 {
+    fill: #eeeeefc2;
+    transition: all 500ms ease-in-out;
+}
+
+.st1 {
+    cursor: pointer;
+}
+
+
+footer {
+    position: fixed;
+    bottom: 3vh;
+    left: 3vw;
+    right: 33vw;
+    border-radius: 25px;
+    background-color: #eeeeef;
+    height: 4vh;
+    width: 64vw;
+    text-align: center;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-content: center;
+    transition: all 500ms ease-in-out;
+}
+
+
+#bkg {
+    position: fixed;
+    width: 30vw;
+    height: 100vh;
+    top: 0;
+    right: 0;
+    z-index: -999;
+    visibility: visible;
+    transition: all 2s ease-in-out;
+}
+.cls-0{background-color:#eeeeef;}
+.cls-1{background-color:#d75771;}
+.cls-2{background-color:#db715c;}
+.cls-3{background-color:#e3b755;}
+.cls-4{background-color:#419e5a;}
+.cls-5{background-color:#51719b;}
+.cls-6{background-color:#85679e;}
+
+#bkg div {
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
+    top: 47vh;
+    transition: all 2s ease-out;
+}
+
+#bkg div h2 {
+    font-size: 6vh;
+    color: rgb(177, 100, 100);
+}
+
+#bkg div h3 {
+    margin-top: 4vh;
+    font-size: 2vh;
+    color: rgb(177, 100, 100);
+}
+
+footer a {
+    position: relative;
+    height: 3vh;
+    width: 15vw;
+    align-self: center;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 1.5vh;
+    color: dimgray;
+    border-radius: 25px;
+    transition: all 500ms ease-in-out;
+    background-color: white;
+    display: inline-flex;
+    justify-content: center;
+}
+
+footer a span {
+    align-self: center;
+}
+
+footer a:hover {
+    background-color: dimgray;
+    color: #eeeeef;
+}
+
+
+
+/* After Preloader */
+
+
+
+.mu-after-load .st0, .mu-after-load .st1{
+    fill: rgba(255, 255, 255, 0);
+    stroke:white;
+    stroke-width:3;
+    stroke-miterlimit:10;
+    opacity: 0;
+    transition: all 1s ease-in-out;
+}
+
+.main-container-layout-before-scrolling .mu-after-load .imgs {
+    height: 110vh;
+    top: -10vh;
+    left: 0;
+}
+
+.main-container-layout-before-scrolling .mu-after-load {
+    animation: moveleft 1s forwards ease-in-out;
+}
+
+@keyframes moveleft {
+    0% {
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        border-radius: 0px;
+    }
+    100% {
+        width: 64vw;
+        height: 80vh;
+        top: 10vh;
+        left: 3vw;
+        border-radius: 25px;
+        overflow: hidden;
+    }
+}
+
+.main-container-layout-before-scrolling .mu-after-load #left-arrow {
+    visibility: hidden;
+    opacity: 0;
+}
+
+
+
+.footer-after-load {
+    visibility: visible;
+    bottom: 3vh;
+    left: 3vw;
+    right: 3vw;
+    width: 94vw;
+    background-color: #eeeeefbe;
+}
+
+.main-container-layout-after-scrolling .mu-after-load {
+    width: 64vw;
+    height: 80vh;
+    top: 10vh;
+    bottom: 10vh;
+    left: 3vw;
+    border-radius: 25px;
+    overflow: hidden;
+    transition: all 2s ease-in-out;
+}
+
+.main-container-layout-after-scrolling #mu-container .imgs {
+    height: 1800px;
+    top: 0vh;
+    left: -10vw;
+}
+
+.main-container-layout-after-scrolling #mu-container #left-arrow {
+    visibility: hidden;
+    opacity: 0;
+}
+
+.main-container-layout-after-scrolling article {
+    visibility: visible;
+}
+
+.main-container-layout-after-scrolling #mu-container .caption-1 {
+    top: -500px;
+    left: -400px;
+}
+
+.main-container-layout-after-scrolling #mu-container .caption-2 {
+    top: -150px;
+    left: -300px;
+} 
+
+.main-container-layout-after-scrolling #mu-container .caption-3 {
+    top: -150px;
+    left: -1100px;
+}
+
+.main-container-layout-after-scrolling #mu-container .caption-4 {
+    top: -850px;
+    left: -400px;
+}
+
+.main-container-layout-after-scrolling #mu-container .caption-5 {
+    top: -800px;
+    left: -1200px;
+}
+
+.main-container-layout-after-scrolling #mu-container .caption-6 {
+    /* width: 2000px !important; */
+    top: -950px;
+    left: -300px;
+}
+
+
+
+
+/* Overlay sections */
+
+article {
+    position: absolute;
+    overflow: hidden;
+    width: 30vw;
+    top: 0;
+    right: 0;
+    padding: 100vh 0 15vh 0;
+    visibility: hidden;
+}
+
+/* article #instructions {
+    margin: 0 20px;
+} */
+
+article section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    position: relative;
+    width: 25vw;
+    margin: 40px auto;
+    border-radius: 25px;
+    background-color: white;
+    right: 0;
+    opacity: 0.4;
+    transition: all 500ms ease-in-out;
+    padding: 60px 0;
+    box-shadow: 0 0 0 rgba(255, 255, 255, 0);
+}
+
+.on-focus {
+    opacity: 1;
+}
+
+.out-focus {
+    opacity: 0.4;
+}
+
+.slide {
+    animation: 300ms forwards ease-in-out;
+}
+
+.out-up, .out-down, .in-up, .in-down {
+    animation-timing-function: ease-in-out;
+}
+
+.out-up {
+    animation-name: out-up ;
+}
+
+.in-up {
+    animation-name: in-up;
+}
+
+.out-down {
+    animation-name: out-down;
+}
+
+.in-down {
+    animation-name: in-down;
+}
+
+
+@keyframes out-up {
+    0% {
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    }
+    100% {
+        box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
+
+@keyframes in-up {
+    0% {
+        box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    }
+    100% {
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    }
+}
+
+@keyframes out-down {
+    0% {
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    }
+    100% {
+        box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
+
+@keyframes in-down {
+    0% {
+        box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    }
+    100% {
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    }
+}
+
+
+
+figure {
+    position: relative;
+    height: 150px;
+    width: 125px;
+    text-align: center;
+    margin: 10px 20px;
+}
+
+figure img {
+    /* position: absolute; */
+    height: 150px;
+    margin: 0 auto;
+    top: 0;
+    left: 0;
+}
+
+figure figcaption {
+    position: absolute;
+    font-size: 50px;
+    left: 45px;
+    top: 70px;
+    text-align: center;
+    font-weight: 700;
+} 
+
+figure #caption-tripper {
+    font-size: 18px;
+    left: 27px;
+    top: 70px;
+}
+
+article section p {
+    margin: 0 15%;
+    line-height: 1.5em;
+    margin-top: 10px;
+}
+
+
+.main-container-layout-after-scrolling .mu-after-load .hotspot-1 {
+    stroke: #d7577188;
+    fill: #d7577188;;
+}
+
+.main-container-layout-after-scrolling .mu-after-load .hotspot-2 {
+    stroke: #db715c88;
+    fill: #db715c88;;
+}
+
+.main-container-layout-after-scrolling .mu-after-load .hotspot-3 {
+    stroke: #e3b75588;
+    fill: #e3b75588;;
+}
+
+.main-container-layout-after-scrolling .mu-after-load .hotspot-4 {
+    stroke: #419e5a88;
+    fill: #419e5a88;;
+}
+
+.main-container-layout-after-scrolling .mu-after-load .hotspot-5 {
+    stroke: #51719b88;
+    fill: #51719b88;;
+}
+
+.main-container-layout-after-scrolling .mu-after-load .hotspot-6 {
+    stroke: #85679e88;
+    fill: #85679e88;;
+}
+
+
 
 
 
@@ -21,12 +461,19 @@ body {
     left: 50%;
     transform: translate(-50%,-50%);
     width: 100vw;
-    transition: all 2s ease-in-out;
 }
 
-.main-container-layout-loading .mu-on-start img {
+.mu-on-start #left-arrow {
+    opacity: 0;
+}
+
+.mu-on-start img {
     visibility: hidden;
 
+}
+
+.mu-on-start .imgs {
+    top: -20vh;
 }
 
 .mu-on-start .st0, .mu-on-start .st1 {
@@ -92,386 +539,6 @@ body {
 .mu-on-start #bus-trip-3 {animation-delay: 0.5s;}
 
 
-/*  */
-
-#svg-container {
-    z-index: 100;
-    transition: all 2s ease-in-out;
-}
-
-#mu-container img {
-    transition: all 2s ease-in-out;
-}
-
-#mu-container {
-    transition: all 2s ease-in-out;
-    position: fixed;
-}
-
-#left-arrow {
-    visibility: hidden;
-    opacity: 0;
-    transition: all 500ms ease-in-out;
-    width: 50px;
-    position: absolute;
-}
-
-#mu-top {
-    transition: all 500ms ease-in-out;
-}
-
-
-/* After Preloader */
-
-.main-container-layout-after-load {
-    position: relative;
-    width: 100%;
-    margin: 0 atuo;
-}
-
-.main-container-layout-after-load .mu-after-load {
-    width: 100vw;
-    height: 100vh;
-    left: 0;
-    top: -20vh;
-}
-
-.main-container-layout-after-load .mu-after-load #left-arrow {
-    visibility: visible;
-    opacity: 1;
-    position: absolute;
-    z-index: 9999;
-    right: 100px;
-    top: 70vh;
-    cursor: pointer;
-}
-
-.mu-after-load .st0, .mu-after-load .st1{
-    fill: rgba(255, 255, 255, 0);
-    stroke:white;
-    stroke-width:3;
-    stroke-miterlimit:10;
-    opacity: 0;
-    transition: all 1s ease-in-out;
-}
-
-.mu-after-load .st1 {
-    cursor: pointer;
-}
-
-
-
-.main-container-layout-after-load .mu-after-load .imgs {
-    width: 100%;
-    visibility: visible;
-    position: absolute;
-}
-
-
-/* after scrolling */
-/* .main-container-layout-after-scrolling {
-    position: relative;
-    width: 1366px;
-} */
-
-.main-container-layout-before-scrolling .mu-after-load .imgs {
-    width: 70vw;
-    visibility: visible;
-    position: absolute;
-}
-
-.main-container-layout-before-scrolling .mu-after-load {
-    animation: moveleft 2s forwards ease-in-out;
-}
-
-@keyframes moveleft {
-    0% {
-        top: -20vh;
-        left: 0;
-        bottom: 0vh;
-        width: 100vw;
-        height: 100vh;
-        border-radius: 0px;
-    }
-    100% {
-        width: 64vw;
-        height: 80vh;
-        top: 10vh;
-        bottom: 10vh;
-        left: 3vw;
-        border-radius: 25px;
-        overflow: hidden;
-    }
-}
-
-.main-container-layout-before-scrolling .mu-after-load #left-arrow {
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    z-index: 9999;
-    right: -1000px;
-    top: 32vh;
-    cursor: pointer;
-}
-
-
-.main-container-layout-after-scrolling article {
-    visibility: visible;
-}
-
-.main-container-layout-after-scrolling #bkg {
-    visibility: visible;
-}
-
-.main-container-layout-after-scrolling .mu-after-load {
-    width: 64vw;
-    height: 80vh;
-    top: 10vh;
-    bottom: 10vh;
-    left: 3vw;
-    border-radius: 25px;
-    overflow: hidden;
-}
-
-.main-container-layout-after-scrolling .mu-after-load .imgs {
-    width: 2500px;
-    position: absolute;
-    transition: all 2s ease-in-out;
-}
-
-.main-container-layout-after-scrolling .mu-after-load #mu-top {
-    opacity: 0.5;
-}
-
-/* .main-container-layout-after-scrolling .mu-after-load .st1 {
-    stroke: rgba(150, 28, 28, 0.5);
-    fill: rgba(150, 28, 28, 0.5);
-} */
-
-.caption-1 {
-    
-    top: -700px;
-    left: -400px;
-}
-
-.caption-2 {
-    top: -250px;
-    left: -300px;
-} 
-
-.caption-3 {
-    top: -250px;
-    left: -1150px;
-}
-
-.caption-4 {
-    top: -1050px;
-    left: -400px;
-}
-
-.caption-5 {
-    top: -1000px;
-    left: -1200px;
-}
-
-.caption-6 {
-    width: 2000px !important;
-    top: -800px;
-    left: -350px;
-}
-
-
-
-
-/* Overlay sections */
-
-article {
-    position: absolute;
-    overflow: hidden;
-    width: 30vw;
-    top: 0;
-    right: 0;
-    padding: 100vh 0 5vh 0;
+.footer-loading {
     visibility: hidden;
 }
-
-article #instructions {
-    margin: 0 20px;
-}
-
-article section {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    position: relative;
-    width: 25vw;
-    /* height: 350px; */
-    margin: 40px auto;
-    border-radius: 25px;
-    background-color: white;
-    right: 0;
-    opacity: 0.4;
-    transition: all 500ms ease-in-out;
-    padding: 60px 0;
-
-}
-
-.on-focus {
-    opacity: 1;
-}
-
-.out-focus {
-    opacity: 0.4;
-}
-
-.slide {
-    animation: 300ms forwards ease-in-out;
-}
-
-.out-up, .out-down, .in-up, .in-down {
-    animation-timing-function: ease-in-out;
-}
-
-.out-up {
-    animation-name: out-up ;
-}
-
-.in-up {
-    animation-name: in-up;
-}
-
-.out-down {
-    animation-name: out-down;
-}
-
-.in-down {
-    animation-name: in-down;
-}
-
-
-@keyframes out-up {
-    0% {
-        
-    }
-    100% {
-        
-    }
-}
-
-@keyframes in-up {
-    0% {
-        
-    }
-    100% {
-        
-    }
-}
-
-@keyframes out-down {
-    0% {
-        
-    }
-    100% {
-        
-    }
-}
-
-@keyframes in-down {
-    0% {
-        
-    }
-    100% {
-        
-    }
-}
-
-
-
-figure {
-    position: relative;
-    height: 150px;
-    width: 125px;
-    text-align: center;
-    margin: 10px 20px;
-}
-
-figure img {
-    /* position: absolute; */
-    height: 150px;
-    margin: 0 auto;
-    top: 0;
-    left: 0;
-}
-
-figure figcaption {
-    position: absolute;
-    font-size: 50px;
-    left: 45px;
-    top: 70px;
-    text-align: center;
-    font-weight: 700;
-} 
-
-figure #caption-tripper {
-    font-size: 18px;
-    left: 27px;
-    top: 70px;
-}
-
-section p {
-    margin: 0 15%;
-    line-height: 1.5em;
-    margin-top: 10px;
-}
-
-
-.main-container-layout-after-scrolling .mu-after-load .hotspot-1 {
-    stroke: #d7577188;
-    fill: #d7577188;;
-}
-
-.main-container-layout-after-scrolling .mu-after-load .hotspot-2 {
-    stroke: #db715c88;
-    fill: #db715c88;;
-}
-
-.main-container-layout-after-scrolling .mu-after-load .hotspot-3 {
-    stroke: #e3b75588;
-    fill: #e3b75588;;
-}
-
-.main-container-layout-after-scrolling .mu-after-load .hotspot-4 {
-    stroke: #419e5a88;
-    fill: #419e5a88;;
-}
-
-.main-container-layout-after-scrolling .mu-after-load .hotspot-5 {
-    stroke: #51719b88;
-    fill: #51719b88;;
-}
-
-.main-container-layout-after-scrolling .mu-after-load .hotspot-6 {
-    stroke: #85679e88;
-    fill: #85679e88;;
-}
-
-
-
-
-#bkg {
-    position: fixed;
-    width: 30vw;
-    height: 100vh;
-    top: 0;
-    right: 0;
-    z-index: -999;
-    visibility: hidden;
-    transition: all 3s ease-in-out;
-}
-.cls-0{background-color:#eeeeef;}
-.cls-1{background-color:#d75771;}
-.cls-2{background-color:#db715c;}
-.cls-3{background-color:#e3b755;}
-.cls-4{background-color:#419e5a;}
-.cls-5{background-color:#51719b;}
-.cls-6{background-color:#85679e;}
